# bowser

./: .gitignore  FEATURE_DOM_GRAPH.md  QUICKSTART_DOM_GRAPH.md  README.md  UPDATE_DOM_TAB.md  main.py  pyproject.toml  test_dom.html
.github/prompts/: plan-bowserBrowser.prompt.md
.github/skills/: skills.md
assets/: default.css
assets/pages/: dom_graph.html  error_404.html  error_500.html  error_network.html  startpage.html
docs/: DOM_GRAPH_UX.md  DOM_VISUALIZATION.md
src/: __init__.py  templates.py
src/accessibility/: __init__.py  a11y.py
src/browser/: __init__.py  browser.py  chrome.py  tab.py
src/debug/: __init__.py  dom_graph.py
src/layout/: __init__.py  block.py  document.py  embed.py  inline.py
src/network/: __init__.py  cookies.py  http.py  images.py  tasks.py  url.py
src/parser/: __init__.py  css.py  html.py  style.py
src/render/: __init__.py  composite.py  fonts.py  paint.py  pipeline.py
src/script/: __init__.py  bindings.py  context.py  runtime.js
tests/: README.md  conftest.py  test_browser.py  test_cookies.py  test_css.py  test_dom_graph.py  test_dom_graph_page.py  test_frame.py  test_html_parsing.py  test_http.py  test_images.py  test_layout.py  test_links.py  test_parser.py  test_render.py  test_styling_integration.py  test_tasks.py  test_templates.py  test_url.py  test_url_normalization.py
